--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -1,12 +1,19 @@
 <h3 class="text-center">Bảng danh sách sinh viên</h3>
+
+<a href="./add" class="btn-primary btn btn-block">Thêm</a>
 <table class="table col-md-4 bg-light p-3">
   <tr>
     <th>Tên</th>
     <th>Tuổi</th>
     <th>Điểm TB</th>
     <th>Địa chỉ</th>
+    <th></th>
+    <th></th>
   </tr>
 
+  {{!-- {{#each }} {{/each}} --}}
+  {{!-- là một hướng dẫn xử lý vòng lặp trong handlebars, --}}
+  {{!-- nó cho phép lặp lại một mảng hoặc đối tượng và tạo đầu ra HTML cho mỗi phần tử --}}
 
   {{#each users}}
   <tr>
@@ -14,6 +21,8 @@
     <td>{{tuoi}}</td>
     <td>{{diemtb}}</td>
     <td>{{diachi}}</td>
+    <td ><a class="btn-primary btn btn-block " href="./update">Sửa</a></td>
+    <td ><a class="btn-primary btn btn-block " href="./delete/{{_id}}">Xóa</a></td>
   </tr>
   {{/each}}
 </table>
